[package]
description = "A cargo runner that ensures your workspace is available when run in wasmtime"
license = "Apache-2.0/MIT"
name = "workspace_runner"
version = "0.1.0"
edition = "2024"

[dependencies]
relative-path = "1.9.3"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
